--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
 version: '3.8'
-
 services:
   app:
     build: .
@@ -8,19 +7,13 @@ services:
       - ./HF_HOME:/app/HF_HOME
       - ./.container-cache:/root/.cache
       - ./venv:/app/audio-webui/venv
-    command: "/app/run.sh"
     environment:
-      - AMD_VISIBLE_DEVICES=all
+      - ROCM_VISIBLE_DEVICES=all
     env_file:
       - .env
     ports:
       - 7860:7860
     stdin_open: true
     tty: true
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: radeon
-              device_ids: ['0']
-              capabilities: [gpu]
+    devices:
+      - /dev/dri:/dev/dri
